--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "@types/react": "^17.0.39",
         "@types/react-dom": "^17.0.11",
         "chart.js": "^3.7.1",
+        "dayjs": "^1.11.5",
         "react": "^17.0.2",
         "react-chartjs-2": "^4.1.0",
         "react-device-detect": "^2.1.2",
@@ -21,6 +22,7 @@
         "react-responsive": "^9.0.0-beta.10",
         "react-router-dom": "^6.2.1",
         "react-scripts": "5.0.0",
+        "react-spring": "^9.5.2",
         "redux-saga": "^1.1.3",
         "styled-components": "^5.3.3",
         "three": "^0.137.5",
