--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "react-chartjs-2": "^4.1.0",
         "react-device-detect": "^2.1.2",
         "react-dom": "^17.0.2",
+        "react-icons": "^4.4.0",
         "react-redux": "^7.2.6",
         "react-responsive": "^9.0.0-beta.10",
         "react-router-dom": "^6.2.1",
